Commit remaining files for v1.1

--- a/custom_components/solark/manifest.json
+++ b/custom_components/solark/manifest.json
@@ -1,5 +1,5 @@
 {
-  "version": "1.0.0",
+  "version": "1.1.0",
   "codeowners": ["@pbix"],
   "config_flow": true,
   "dependencies": [],
@@ -9,6 +9,6 @@
   "iot_class": "local_polling",
   "name": "SolArk Inverter Modbus",
   "requirements": [
-    "pymodbus==2.3.0"
+    "pymodbus>=2.3.0"
   ]
 }
